--- a/app/src/main/res/layout/activity_add_goal.xml
+++ b/app/src/main/res/layout/activity_add_goal.xml
@@ -1,79 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout
     android:orientation="vertical"
     android:id="@+id/activity_add_goal"
     android:layout_width="match_parent"
+
     android:layout_height="match_parent"
     tools:context="com.example.anurag145.hackdtu.AddGoalActivity">
     <android.support.design.widget.TextInputLayout
-        android:background="@color/colorPrimaryDark"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark">
         <EditText
             android:hint="Goal Name"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:textColorHint="@android:color/white"
             android:layout_width="match_parent"
-            android:padding="24dp"
+            android:padding="12dp"
             android:maxLines="1"
-            android:layout_height="60dp" />
+            android:layout_height="50dp" />
     </android.support.design.widget.TextInputLayout>
     <android.support.design.widget.TextInputLayout
-        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary">
         <EditText
             android:hint="Goal Details"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
-            android:layout_width="match_parent"
-            android:padding="12dp"
-            android:layout_height="50dp" />
-    </android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:hint="Amount"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
-            android:layout_width="match_parent"
-            android:padding="12dp"
-            android:layout_height="50dp" />
-    </android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:hint="Duration"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
-            android:layout_width="match_parent"
-            android:padding="12dp"
-            android:layout_height="50dp" />
-    </android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:hint="Goal Details"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
-            android:layout_width="match_parent"
-            android:padding="12dp"
-            android:layout_height="50dp" />
-    </android.support.design.widget.TextInputLayout>
-    <EditText
-        android:hint="People:"
-        android:layout_width="match_parent"
-        android:padding="12dp"
-        android:layout_height="50dp" />
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:hint="Add a Contact"
             android:textColor="@android:color/white"
             android:textColorHint="@android:color/white"
             android:layout_width="match_parent"
@@ -81,4 +37,48 @@
             android:layout_height="50dp" />
     </android.support.design.widget.TextInputLayout>
 
+        <Button
+            android:hint="Amount"
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/white"
+            android:layout_width="match_parent"
+            android:padding="12dp"
+            android:layout_height="50dp" />
+
+
+        <Button
+            android:text="Duration"
+            android:id="@+id/time"
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/white"
+            android:layout_width="match_parent"
+            android:padding="12dp"
+            android:onClick="setDate"
+            android:layout_height="50dp" />
+    <ListView
+        android:paddingTop="10dp"
+        android:id="@+id/listView"
+        android:paddingBottom="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </ListView>
+
+
+        <Button
+            android:hint="Add a Contact"
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/white"
+            android:layout_width="match_parent"
+            android:padding="12dp"
+            android:layout_height="50dp" />
+    <Button
+        android:hint="Done"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="150dp"
+        android:layout_height="50dp" />
+
 </LinearLayout>
+</ScrollView>
