--- a/app/src/main/res/drawable/background_splash.xml
+++ b/app/src/main/res/drawable/background_splash.xml
@@ -3,13 +3,17 @@
 
     >
 
-
-
-    <item>
+        <item>
         <bitmap
 
             android:gravity="center"
             android:src="@mipmap/m"/>
+    </item>
+    <item>
+        <bitmap
+            
+            android:gravity="center"
+            android:src="@mipmap/n"/>
     </item>
 
 
