--- a/app/src/main/res/layout/activity_add_goal.xml
+++ b/app/src/main/res/layout/activity_add_goal.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
         android:id="@+id/activity_add_goal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         tools:context="com.example.anurag145.hackdtu.AddGoalActivity">
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/goal_name_textview_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimaryDark">
             <EditText
+                android:id="@+id/goal_name_textview"
                 android:hint="Goal Name"
                 android:textColor="@android:color/black"
                 android:textColorHint="@android:color/white"
@@ -24,10 +24,12 @@
                 android:layout_height="50dp" />
         </android.support.design.widget.TextInputLayout>
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/goal_about_textview_container"
             android:background="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <EditText
+                android:id="@+id/goal_about_textview"
                 android:hint="Goal Details"
                 android:textColor="@android:color/white"
                 android:textColorHint="@android:color/white"
@@ -36,40 +38,46 @@
                 android:layout_height="50dp" />
         </android.support.design.widget.TextInputLayout>
         <Button
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
-            android:layout_width="match_parent"
-            android:padding="12dp"
-            android:layout_height="50dp" />
-        <Button
             android:text="Duration"
-            android:id="@+id/time"
+            android:id="@+id/goal_time"
             android:textColor="@android:color/white"
             android:textColorHint="@android:color/white"
             android:layout_width="match_parent"
             android:padding="12dp"
-            android:onClick="setDate"
             android:layout_height="50dp" />
-        <ListView
-            android:paddingTop="10dp"
-            android:id="@+id/listView"
-            android:paddingBottom="10dp"
+        <Button
+            android:id="@+id/goal_amount"
+            android:text="Amount"
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/white"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:padding="12dp"
+            android:layout_height="50dp" />
 
-        </ListView>
-        <Button
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
-            android:layout_width="match_parent"
-            android:padding="12dp"
-            android:layout_height="50dp" />
-        <Button
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
-            android:layout_width="wrap_content"
-            android:layout_marginLeft="150dp"
-            android:layout_height="50dp" />
+
+            <ListView
+                android:paddingTop="10dp"
+                android:id="@+id/goal_listview"
+                android:paddingBottom="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                />
+
+
+    <Button
+        android:id="@+id/goal_add_contact"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        android:layout_width="match_parent"
+        android:padding="12dp"
+        android:layout_height="50dp" />
+    <Button
+        android:id="@+id/goal_submit"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="150dp"
+        android:layout_height="50dp" />
 
     </LinearLayout>
-</ScrollView>
