--- a/app/src/main/res/layout/fragment_contact_fragments.xml
+++ b/app/src/main/res/layout/fragment_contact_fragments.xml
@@ -4,8 +4,82 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.anurag145.hackdtu.fragments.ContactFragments">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/contact_rec"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:background="@color/authui_colorPrimary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <android.support.v7.widget.CardView
+                android:id="@+id/img_container"
+                android:layout_margin="24dp"
+                app:cardCornerRadius="50dp"
+                android:elevation="24dp"
+                android:layout_centerHorizontal="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/prof_icon"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@mipmap/ic_launcher"/>
+            </android.support.v7.widget.CardView>
+            <TextView
+                android:textColor="@android:color/white"
+                tools:text="Person Name"
+                android:id="@+id/person_name"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/img_container"
+                android:layout_width="wrap_content"
+                android:textSize="18sp"
+                android:layout_height="wrap_content" />
+            <android.support.v7.widget.CardView
+                android:layout_below="@id/person_name"
+                android:id="@+id/level_container"
+                android:layout_margin="12dp"
+                app:cardCornerRadius="15dp"
+                android:elevation="4dp"
+                android:layout_centerHorizontal="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:paddingTop="6dp"
+                    android:layout_gravity="center"
+                    android:textAlignment="center"
+                    android:id="@+id/level_icon"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    tools:text="0"/>
+            </android.support.v7.widget.CardView>
+
+        </RelativeLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+            <TextView
+                android:id="@+id/profit_details"
+                tools:text="10$"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:textSize="40sp"
+                android:textColor="@android:color/holo_green_light"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent" />
+            <TextView
+                android:id="@+id/loss_details"
+                tools:text="10$"
+                android:textColor="@android:color/holo_red_light"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:textSize="40sp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+    </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
